Fix print button visible on print

--- a/resources/sass/print/print.scss
+++ b/resources/sass/print/print.scss
@@ -25,7 +25,7 @@
     }
 
     // Hide all buttons
-    .btn {
+    .btn, .btn2 {
         display: none !important;
     }
 
@@ -126,7 +126,7 @@ body, #app.wrapper, .wrapper, .content-wrapper, .box {
         }
     }
 
-    .btn {
+    .btn, .btn2 {
         display: none;
     }
 
